--- a/wp-content/themes/cetm-child/styles/styles.scss
+++ b/wp-content/themes/cetm-child/styles/styles.scss
@@ -4,8 +4,10 @@
 @import "_footer.scss";
 @import "_header.scss";
 @import "page/_home.scss";
+@import "page/_element.scss";
 @import "lib/slick-theme.scss";
 @import "lib/slick.scss";
+
 
 
 
