--- a/wp-content/themes/cetm-child/styles/global.scss
+++ b/wp-content/themes/cetm-child/styles/global.scss
@@ -206,7 +206,7 @@ label {
 }
 
 .button-primary {
-    background-color: #e57e2f;
+    background-color: #e57e2f !important;
     border-radius: 7px;
     color: #fff;
     text-transform: uppercase;
@@ -218,6 +218,7 @@ label {
         max-width: 20px;
         float: right;
         margin-left: 10px;
+        margin-top:5px;
     }
 
     &:hover {
