--- a/wp-content/themes/cetm-child/styles/page/_home.scss
+++ b/wp-content/themes/cetm-child/styles/page/_home.scss
@@ -473,6 +473,7 @@
                 color: #808080;
                 font-family: 'helveticaneuemedium';
                 font-size: 18px;
+                margin:0;
             }
         }
 
