--- a/wp-content/themes/cetm-child/styles/page/_element.scss
+++ b/wp-content/themes/cetm-child/styles/page/_element.scss
@@ -1,4 +1,8 @@
 ﻿.related-solution {
+    .pt-cv-content-item {
+        padding: 0;
+    }
+
     .pt-cv-ifield {
         position: relative;
         cursor: pointer;
@@ -48,7 +52,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;            
+            height: 100%;
         }
 
         &:hover {
