--- a/wp-content/themes/cetm-child/style.css
+++ b/wp-content/themes/cetm-child/style.css
@@ -63,6 +63,9 @@ h1, h2, h3, h4, h5, h6 {
     .project-cetm > .col-inner > .row > .page-col > .col-inner {
         padding: 10px 5px;
     }
+    .blog-left{
+        padding-right: 60px;
+    }
 }
 
 @media only screen and (max-width: 850px) {
@@ -74,4 +77,54 @@ h1, h2, h3, h4, h5, h6 {
     .project-cetm > .col-inner > .row > .page-col > .col-inner {
         padding-top: 5px;
     }
+}
+.blog-left .wp-show-posts-image img{
+    width: 100% !important;
+}
+.blog-left .wp-show-posts-entry-header{
+    margin-bottom: 30px;
+}
+.blog-left  .wp-show-posts-single{
+    border-bottom: 1px solid #6666;
+    padding-bottom: 30px;
+    margin-bottom: 45px;
+}
+.blog-right .wp-show-posts-entry-header{
+    height: 48px;
+    overflow: hidden;
+    margin-bottom: 10px;
+}
+a.wp-show-posts-read-more{
+    border: 2px solid #10819b;
+    font-size: 14px;
+}
+a.wp-show-posts-read-more:hover, a.wp-show-posts-read-more:focus, a.wp-show-posts-read-more:visited {
+    border: 2px solid transparent;
+    color: #fff;
+    background: #10819b;
+    text-decoration: none;
+}
+.wpsp-load-more{
+    text-align: center;
+    font-size: 16px;
+    font-weight: 700;
+}
+.page-numbers{
+    color: #777777;
+}
+.current{
+    color: #44bbff;
+    text-decoration: underline;
+
+}
+.blog-right .wp-show-posts-single{
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #6666;
+}
+.wp-show-posts-entry-title a{
+    color: #424242;
+}
+.nav>li>a:hover{
+    background-color: transparent;
 }
