--- a/wp-content/themes/cetm-child/styles/fonts.scss
+++ b/wp-content/themes/cetm-child/styles/fonts.scss
@@ -22,3 +22,7 @@
     font-family: 'helveticaneueitalic';
     src: url('../fonts/helveticaneueitalic.ttf') format('truetype');
 }
+@font-face {
+    font-family: 'utm_beba';
+    src: url('../fonts/UTM Bebas.ttf') format('truetype');
+}
