--- a/wp-content/themes/cetm-child/styles/global.scss
+++ b/wp-content/themes/cetm-child/styles/global.scss
@@ -183,9 +183,12 @@ label {
     }
 }
 
-.full-width .ubermenu-nav, .container, .row {
-    max-width: 1300px !important;
+@media screen and (min-width: 1600px) {
+    .full-width .ubermenu-nav, .container, .row {
+        max-width: 1300px !important;
+    }
 }
+
 
 .label-line {
     position: relative;
@@ -218,10 +221,15 @@ label {
         max-width: 20px;
         float: right;
         margin-left: 10px;
-        margin-top:5px;
+        margin-top: 5px;
     }
 
     &:hover {
         opacity: 0.9;
     }
+}
+
+.font-beba {
+    font-family: 'utm_beba';
+    color: #000;
 }
