--- a/wp-content/themes/cetm-child/styles/styles.scss
+++ b/wp-content/themes/cetm-child/styles/styles.scss
@@ -5,6 +5,7 @@
 @import "_header.scss";
 @import "page/_home.scss";
 @import "page/_element.scss";
+@import "page/_clear.scss";
 @import "lib/slick-theme.scss";
 @import "lib/slick.scss";
 
