--- a/wp-content/themes/cetm-child/styles/_footer.scss
+++ b/wp-content/themes/cetm-child/styles/_footer.scss
@@ -1,6 +1,6 @@
 footer {
     background-color: #2d2c32;
-    padding: 60px 0;
+    padding: 25px 0;
     color: #dfdfdf;
 
     .logo {
@@ -12,14 +12,15 @@ footer {
     h4 {
         font-family: 'helveticaneuemedium';
         color: #fff;
-        font-size: 18px;
-        margin-bottom: 25px;
-        margin-top: 40px;
+        font-size: 16px;
+        margin-bottom: 15px;
+        margin-top: 30px;
     }
 
     p, a {
         color: #dfdfdf;
-        font-size: 15px;
+        font-size: 14px;
+        margin-bottom:10px;
     }
 
     a {
@@ -43,14 +44,14 @@ footer {
         list-style: none;
 
         li {
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
     }
 
     .cus-contact {
         padding: 0;
         margin-top: 40px;
-
+        padding-left:30px;
         @include device-1 {
             padding: 0 15px;
         }
@@ -103,5 +104,8 @@ footer {
                 box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(229,126,47,.6);
             }
         }
+    }
+    .widget{
+        margin-bottom:0;
     }
 }
