--- a/wp-content/themes/cetm-child/styles/styles.css
+++ b/wp-content/themes/cetm-child/styles/styles.css
@@ -192,75 +192,178 @@ label {
   font-family: 'utm_beba';
   font-weight: normal; }
 
-footer {
-  background-color: #2d2c32;
-  padding: 25px 0;
-  color: #dfdfdf; }
-  footer .logo img {
-    max-width: 100%; }
-  footer h4 {
-    font-family: 'helveticaneuemedium';
-    color: #fff;
-    font-size: 16px;
-    margin-bottom: 15px;
-    margin-top: 30px; }
-  footer p, footer a {
-    color: #dfdfdf;
-    font-size: 14px;
-    margin-bottom: 10px; }
-  footer a:hover {
-    color: #df7b2f;
+a.button {
+  text-decoration: none; }
+  a.button:hover {
     text-decoration: none; }
-  footer h3 {
-    font-family: 'helveticaneuemedium';
-    font-size: 18px;
-    text-transform: uppercase;
-    margin-top: 40px;
-    margin-bottom: 25px; }
-  footer ul {
+
+footer {
+  background-color: #003246; }
+  footer .logo {
+    max-width: 135px;
+    float: left; }
+    footer .logo img {
+      width: 100%; }
+  footer .menu {
+    float: left;
+    padding: 0;
+    margin: 0;
+    margin-top: 35px;
+    margin-left: 45px; }
+    @media screen and (max-width: 1024px) {
+      footer .menu {
+        margin: 0; } }
+    footer .menu li {
+      display: inline-block;
+      list-style: none;
+      margin: 0 15px; }
+      @media screen and (max-width: 1024px) {
+        footer .menu li {
+          margin: 0 5px; } }
+      @media only screen and (min-device-width: 320px) and (max-device-width: 374px) {
+        footer .menu li {
+          margin: 0 2px; } }
+      footer .menu li a {
+        color: #fff;
+        text-transform: uppercase;
+        font-size: 12px; }
+        @media screen and (max-width: 1024px) {
+          footer .menu li a {
+            font-size: 10px; } }
+        footer .menu li a:hover {
+          text-decoration: none;
+          color: #fff;
+          opacity: 0.85; }
+  footer .social {
+    float: right;
+    padding: 0;
+    margin: 0;
+    margin-top: 22px; }
+    @media screen and (max-width: 1024px) {
+      footer .social {
+        float: left; } }
+    footer .social li {
+      display: inline-block;
+      list-style: none;
+      margin: 0 5px; }
+      footer .social li span {
+        color: #fff;
+        font-size: 13px;
+        text-transform: uppercase; }
+      footer .social li a {
+        display: inline-block;
+        width: 35px;
+        height: 35px;
+        border: 1px solid #fff;
+        border-radius: 50%;
+        text-align: center;
+        color: #fff;
+        padding-top: 7px; }
+        footer .social li a:hover {
+          text-decoration: none;
+          background-color: #fff;
+          color: #2791da;
+          transition: all ease 0.15s; }
+  footer:before, footer:after {
+    content: " ";
+    display: table; }
+  footer:after {
+    clear: both; }
+  footer .img-qr {
+    float: left; }
+    footer .img-qr img {
+      max-width: 150px; }
+  footer .company-info {
+    padding: 0;
+    margin: 0;
+    float: left;
+    list-style: none;
+    color: #fff;
+    font-size: 13px;
+    margin-left: 25px; }
+    @media screen and (max-width: 1024px) {
+      footer .company-info {
+        margin-left: 15px; } }
+    footer .company-info li {
+      position: relative;
+      padding-left: 25px;
+      margin-bottom: 10px; }
+      footer .company-info li:first-child {
+        padding-left: 0; }
+      footer .company-info li:before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 2px;
+        font-family: "Font Awesome 5 Free"; }
+      footer .company-info li.adddress:before {
+        content: "\f041"; }
+      footer .company-info li.phone:before {
+        content: "\f095";
+        font-weight: 700; }
+      footer .company-info li.email:before {
+        content: "\f0e0"; }
+    footer .company-info h3 {
+      font-size: 13px;
+      text-transform: uppercase;
+      margin-top: 0; }
+      @media screen and (max-width: 1024px) {
+        footer .company-info h3 {
+          line-height: 21px; } }
+  footer .app-info {
+    float: right;
     padding: 0;
     margin: 0;
     list-style: none; }
-    footer ul li {
-      margin-bottom: 10px; }
-  footer .cus-contact {
-    padding: 0;
-    margin-top: 40px;
-    padding-left: 30px; }
-    @media screen and (max-width: 1023px) {
-      footer .cus-contact {
-        padding: 0 15px; } }
-    footer .cus-contact .form-group {
-      margin-bottom: 10px;
-      position: relative; }
-      footer .cus-contact .form-group:before {
-        content: "";
-        position: absolute;
-        top: 13px;
-        left: 15px;
-        width: 13px;
-        height: 13px;
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center; }
-      footer .cus-contact .form-group.name:before {
-        background-image: url("../images/ico_user.png"); }
-      footer .cus-contact .form-group.phone:before {
-        background-image: url("../images/ico_phone.PNG"); }
-      footer .cus-contact .form-group.email:before {
-        background-image: url("../images/ico_mail.PNG"); }
-    footer .cus-contact .form-control {
-      height: 40px;
-      border-radius: 7px;
-      color: #808080;
-      padding-left: 35px; }
-      footer .cus-contact .form-control:focus {
-        border-color: #e57e2f;
-        outline: 0;
-        -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(229, 126, 47, 0.6);
-        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(229, 126, 47, 0.6); }
-  footer .widget {
-    margin-bottom: 0; }
+    @media screen and (max-width: 1024px) {
+      footer .app-info {
+        float: left;
+        margin-left: 15px;
+        margin-top: 20px; } }
+    footer .app-info li {
+      margin-bottom: 20px; }
+    footer .app-info p {
+      color: #fff;
+      font-size: 13px; }
+  footer .copyright {
+    margin-top: 25px;
+    background-color: #0f3c4e;
+    text-align: center;
+    min-height: 36px;
+    padding-top: 10px; }
+    footer .copyright p {
+      color: #fff;
+      font-size: 12px; }
+  footer .email-form {
+    position: relative; }
+    footer .email-form input {
+      padding-left: 10px;
+      padding-right: 32px; }
+    footer .email-form:after {
+      content: "\f0e0";
+      font-family: "Font Awesome 5 Free";
+      width: 28px;
+      height: 28px;
+      background-color: #48b0f8;
+      position: absolute;
+      top: 3px;
+      right: 3px;
+      border-radius: 50%;
+      text-align: center;
+      padding-top: 4px;
+      padding-left: 2px;
+      color: #fff;
+      border-radius: 50%; }
+  footer .control-round {
+    width: 100%;
+    border-radius: 30px;
+    height: 34px;
+    color: #6c6c6c;
+    font-size: 16px;
+    border: 1px solid #fff; }
+    footer .control-round:hover, footer .control-round:active, footer .control-round:focus {
+      border-color: #a2d6fa;
+      transition: all ease 0.2s; }
 
 .header .header-main .nav > li > a {
   font-size: 14px;
@@ -328,7 +431,6 @@ footer {
     max-width: 730px;
     margin: 0 auto;
     margin-top: 20px;
-    margin-bottom: 60px;
     line-height: 23px; }
   .activity .list .item {
     display: inline-block;
@@ -535,9 +637,9 @@ footer {
       transition: opacity .3s ease; }
       .swiper-container.nav-slider .swiper-slide.swiper-slide-active {
         background-color: #fff;
-        -webkit-box-shadow: 0px 0px 16px 2px #949494;
-        -moz-box-shadow: 0px 0px 16px 2px #949494;
-        box-shadow: 0px 0px 16px 2px #949494; }
+        -webkit-box-shadow: -1px 0px 30px 3px #dbdbdb;
+        -moz-box-shadow: -1px 0px 30px 3px #dbdbdb;
+        box-shadow: -1px 0px 30px 3px #dbdbdb; }
         .swiper-container.nav-slider .swiper-slide.swiper-slide-active .content p {
           color: #000; }
       .swiper-container.nav-slider .swiper-slide .content {
@@ -661,6 +763,159 @@ footer {
     right: 20px; }
     .nav-slider .swiper-slide i img {
       max-width: 30px; }
+
+.contact-us .c-banner {
+  height: 400px;
+  position: relative;
+  display: table;
+  width: 100%;
+  margin-bottom: 10px; }
+  .contact-us .c-banner .banner-blur {
+    /*background-image: url(../../images/bg_2.jpg);*/
+    background-image: url("../../images/contact_bn.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 0px -700px;
+    position: fixed;
+    height: 450px;
+    width: 100%;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    /*filter: blur(2px);
+            -webkit-filter: blur(2px);*/ }
+    @media screen and (min-width: 1920px) {
+      .contact-us .c-banner .banner-blur {
+        background-position: 0px -900px; } }
+  .contact-us .c-banner .text {
+    display: table-cell;
+    width: 100%;
+    vertical-align: middle;
+    text-align: center;
+    z-index: 2; }
+    .contact-us .c-banner .text h3 {
+      font-family: 'helveticaneuelight' !important;
+      color: #fff;
+      font-size: 32px;
+      margin: 0;
+      text-transform: uppercase;
+      position: relative;
+      margin-bottom: 20px; }
+    .contact-us .c-banner .text p {
+      color: #fff;
+      font-size: 18px; }
+
+.contact-us .c-cotainer {
+  margin-top: -90px;
+  background-color: #fff;
+  padding: 60px 80px; }
+
+.contact-us .nav-tabs {
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style: none; }
+  .contact-us .nav-tabs > li {
+    position: relative;
+    display: block;
+    float: left;
+    margin-bottom: -1px;
+    margin-right: 30px; }
+    .contact-us .nav-tabs > li .avatar_tab {
+      width: 65px;
+      height: 70px;
+      display: block;
+      background-size: cover;
+      background-color: #8f8f8f;
+      background-position: center;
+      background-repeat: no-repeat; }
+    .contact-us .nav-tabs > li a {
+      position: relative;
+      display: block;
+      line-height: 1.42857143;
+      border: 1px solid transparent;
+      border-radius: 4px 4px 0 0;
+      text-decoration: none !important; }
+    .contact-us .nav-tabs > li.active .avatar_tab {
+      background-color: #4b98ce; }
+
+.contact-us .tab-content > p {
+  margin-top: 10px; }
+
+.contact-us .contact-text label {
+  font-family: 'helveticaneuemedium'; }
+
+.contact-us .overview h2 {
+  font-family: 'helveticaneuelight';
+  color: #333;
+  font-size: 30px;
+  margin-bottom: 20px; }
+
+.contact-us .overview .list-contact {
+  list-style: none;
+  padding: 0;
+  margin: 0; }
+  .contact-us .overview .list-contact li {
+    width: 50%;
+    float: left;
+    min-height: 115px;
+    font-size: 14px; }
+    .contact-us .overview .list-contact li:nth-child(1), .contact-us .overview .list-contact li:nth-child(3) {
+      padding-right: 20px; }
+    .contact-us .overview .list-contact li:nth-child(2), .contact-us .overview .list-contact li:nth-child(4) {
+      padding-left: 20px; }
+    .contact-us .overview .list-contact li span {
+      display: block; }
+      .contact-us .overview .list-contact li span > span {
+        display: block; }
+        .contact-us .overview .list-contact li span > span:first-child {
+          text-transform: uppercase;
+          font-family: 'helveticaneuelight';
+          font-size: 16px;
+          margin: 5px 0; }
+        .contact-us .overview .list-contact li span > span a {
+          color: #646464; }
+    .contact-us .overview .list-contact li i {
+      color: #4b98ce;
+      font-size: 30px; }
+      .contact-us .overview .list-contact li i.fa-clock {
+        font-weight: 500; }
+
+.contact-us .send-us-pop {
+  text-align: center;
+  font-size: 14px;
+  -webkit-box-shadow: 0px 0px 33px 0px #8f8f8f;
+  -moz-box-shadow: 0px 0px 33px 0px #8f8f8f;
+  box-shadow: 0px 0px 33px 0px #8f8f8f;
+  padding: 80px 60px; }
+  .contact-us .send-us-pop h3 {
+    font-family: 'helveticaneuelight';
+    color: #4b98ce;
+    font-size: 38px;
+    margin-top: 0; }
+  .contact-us .send-us-pop .note-txt {
+    max-width: 270px;
+    display: inline-block;
+    margin-bottom: 30px; }
+  .contact-us .send-us-pop .form-group {
+    padding: 0 15px; }
+  .contact-us .send-us-pop .form-control {
+    margin-bottom: 25px;
+    border: 0;
+    border-bottom: 1px solid #ddd;
+    outline: none;
+    box-shadow: none; }
+    .contact-us .send-us-pop .form-control:focus {
+      border-color: #4b98ce; }
+  .contact-us .send-us-pop .button-submit {
+    background-color: #4b98ce;
+    color: #fff;
+    border-radius: 20px;
+    border: 1px solid #4b98ce;
+    padding: 10px 34px;
+    transition: all ease 0.2s; }
+    .contact-us .send-us-pop .button-submit:hover {
+      opacity: 0.8; }
 
 .related-solution .pt-cv-content-item {
   padding: 0; }
