--- a/wp-content/themes/cetm-child/styles/styles.scss
+++ b/wp-content/themes/cetm-child/styles/styles.scss
@@ -4,6 +4,7 @@
 @import "_footer.scss";
 @import "_header.scss";
 @import "page/_home.scss";
+@import "page/_contact-us.scss";
 @import "page/_element.scss";
 @import "page/_clear.scss";
 @import "lib/slick-theme.scss";
